--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "d3": "^4.12.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-grid-layout": "^0.16.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2"
   },
